# minimalist

./: .gitignore  About.md  CLAUDE.md  Excel.officeUI  PERSONAL.XLSB  README.md  TEMPLATE R00.potx  TestTemplate.xlsx  checklist_collections.py  checklists.py  excel.ipynb  excel.py  functions.py  interact.ipynb  legacy.ipynb  mini.py  pdf_scratch.py  pdftools.ipynb  proposal.ipynb  pyproject.toml  resources  scratch.py  technical.ipynb  template.ipynb  test_formulas.py  test_proposal.xlsx  test_proposal_2.xlsx  test_proposal_3.xlsx  tests.py  utilities.py
.claude/: settings.local.json
docs/: .markdownlint.yaml  command_line.md  config_sheet_b21_to_b32.md  format_column_border_vba  item_removal_negative_quantity.md  prevent_excel_from_stealing_focus.md  refactor_import.md  sharepoint_r1.md
resources/: Planner.xltx  Template.xltx
