[project]
name = "minimalist"
version = "0.1.4"
description = "Proposal writing tool for excel."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "jupyter>=1.1.1",
    "numpy>=2.1.1",
    "pandas>=2.2.3",
    "reportlab>=4.2.4",
    "requests>=2.32.3",
    "xlwings>=0.33.0",
]
